@@ -50,11 +50,12 @@ subprojects {
     tasks {
         withType<JavaCompile> {
             options.encoding = "UTF-8"
-            options.compilerArgs.addAll(listOf("-implicit:none", "-Xlint:deprecation"))
+            options.compilerArgs.addAll(listOf("-implicit:none", "-Xlint:deprecation", "-Xlint:unchecked"))
         }
 
         withType<Test> {
             useJUnitPlatform()
+            jvmArgs("--enable-native-access=ALL-UNNAMED")
         }
     }
 }
